--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@tanstack/react-router-devtools": "^1.144.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.31.4",
     "electron-squirrel-startup": "^1.0.1",
     "i18next": "^25.7.4",
     "lucide-react": "^0.562.0",
