--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "electron-playwright-helpers": "^2.1.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-no-barrel-files": "^1.2.2",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
