--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "composite": true,
     "declaration": true,
     "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
     "allowJs": false,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
