--- a/package.json
+++ b/package.json
@@ -81,14 +81,17 @@
     "@tanstack/react-router-devtools": "^1.144.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "convex": "^1.31.4",
     "electron-squirrel-startup": "^1.0.1",
     "i18next": "^25.7.4",
+    "jotai": "^2.16.2",
     "lucide-react": "^0.562.0",
     "radix-ui": "^1.4.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-i18next": "^16.5.1",
+    "react-resizable-panels": "^4.4.1",
     "shadcn": "^3.6.3",
     "tailwind-merge": "^3.4.0",
     "update-electron-app": "^3.1.2",
