--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "radix-ui": "^1.4.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-hotkeys-hook": "^5.2.3",
     "react-i18next": "^16.5.1",
     "react-resizable-panels": "^4.4.1",
     "shadcn": "^3.6.3",
